# rusty-commit

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL.md  LICENSE  README.md  README_OAUTH.md  action.yml  advisory.toml  demo-secure-storage.sh  install.sh  justfile  release.sh
.github/: dependabot.yml  rusty-commit-public-key.asc
.github/workflows/: auto-close-conflicted-prs.yml  ci.yml  coderabbit.yml  dependabot-auto-merge.yml  dependabot-automerge.yml  dependabot-commands.yml  dependabot-rebase.yml  dependencies.yml  notify-homebrew.yml  opengrep.yml  package-release.yml  publish-alpine-repo.yml  publish.yml  release-manual.yml  release-prepare.yml  release.yml  semgrep.yml  sign-packages.yml  test-package.yml
.github/workflows/examples/: rustycommit-example.yml  rustycommit-multi-provider.yml  rustycommit-pr-commits.yml  rustycommit-scheduled.yml
.serena/: project.yml
ci_logs/: run-16860383097-jobs.json
completions/: _rco  rco.bash  rco.fish
docs/: INSTALL-SCRIPT-VERIFICATION.md  SECURITY.md  SIGNING.md  VERIFICATION.md
docs/plans/: 2026-02-04-tui-setup-design.md  2026-02-04-tui-setup-implementation.md
man/: rco.1
packaging/: README.md
packaging/alpine/: APKBUILD
packaging/aur/: .SRCINFO  PKGBUILD
packaging/chocolatey/: rusty-commit.nuspec
packaging/chocolatey/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
packaging/debian/: control
packaging/nix/: default.nix
packaging/rpm/: rusty-commit.spec
packaging/scoop/: rusty-commit.json
packaging/winget/: hongkongkiwi.rusty-commit.installer.yaml  hongkongkiwi.rusty-commit.locale.en-US.yaml  hongkongkiwi.rusty-commit.yaml
src/: cli.rs  config.rs  git.rs  lib.rs  main.rs  update.rs  update_old.rs
src/auth/: codex_oauth.rs  gitlab_oauth.rs  mod.rs  oauth.rs  token_storage.rs  vercel_oauth.rs
src/commands/: auth.rs  commit.rs  commitlint.rs  completions.rs  config.rs  githook.rs  mcp.rs  mod.rs  model.rs  pr.rs  setup.rs  skills.rs  update.rs
src/commands/setup/: mod.rs  prompts.rs  providers.rs  ui.rs  wizards.rs
src/commands/setup/ratatui/: app.rs  event.rs  mod.rs  runner.rs
src/commands/setup/ratatui/screens/: auth.rs  hooks.rs  mod.rs  model.rs  provider.rs  settings.rs  style.rs  summary.rs  welcome.rs
src/config/: accounts.rs  format.rs  migrations.rs  secure_storage.rs  setup_config.rs
src/output/: error.rs  mod.rs  prelude.rs  progress.rs  styling.rs
src/providers/: anthropic.rs  azure.rs  bedrock.rs  flowise.rs  gemini.rs  huggingface.rs  mlx.rs  mod.rs  nvidia.rs  ollama.rs  openai.rs  perplexity.rs  prompt.rs  registry.rs  vertex.rs  xai.rs
src/skills/: mod.rs
src/utils/: commit_style.rs  diff_chunking.rs  hooks.rs  mod.rs  retry.rs  thinking_strip.rs  token.rs  version.rs
tests/: auth_test.rs  cli_integration_test.rs  cli_test.rs  config_test.rs  git_test.rs  oauth_test.rs  providers_comprehensive_test.rs  providers_test.rs  update_test.rs
