[package]
name = "rusty-commit"
version = "1.0.27"
edition = "2021"
authors = ["Rusty Commit Contributors"]
description = "Rust-powered AI commit message generator - Write impressive commits in seconds"
license = "MIT"
repository = "https://github.com/hongkongkiwi/rusty-commit"
keywords = ["git", "ai", "commit", "rust", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
homepage = "https://github.com/hongkongkiwi/rusty-commit"
documentation = "https://docs.rs/rusty-commit"

# Publish to crates.io
publish = ["crates-io"]

[[bin]]
name = "rco"
path = "src/main.rs"

[features]
# ═══════════════════════════════════════════════════════════════════════════════
# Default Features - Core providers enabled by default for convenience
# ═══════════════════════════════════════════════════════════════════════════════
default = [
    # Core providers (all OpenAI-compatible via single feature)
    "openai",
    # Dedicated implementations
    "anthropic",
    "ollama",
    "gemini",
    "azure",
    "xai",
    "perplexity",
]

# Enable secure storage for API keys (requires system keychain)
secure-storage = ["keyring"]
# Enable TUI (Terminal User Interface) for setup command
tui = ["ratatui", "crossterm"]
# Include extra documentation (for docs.rs)
docs = []

# ═══════════════════════════════════════════════════════════════════════════════
# Provider Feature Groups - Enable all providers in a category
# ═══════════════════════════════════════════════════════════════════════════════
# Popular cloud providers
providers-popular = ["openai", "anthropic", "ollama", "gemini", "xai", "azure"]
# Fast inference providers
providers-fast = ["openai"]
# Local/self-hosted providers
providers-local = ["ollama"]
# Enterprise providers
providers-enterprise = ["bedrock", "vertex", "azure"]
# All providers (maximum functionality, larger binary)
providers-all = ["providers-popular", "providers-local", "providers-enterprise", "huggingface", "mlx", "nvidia", "flowise"]

# ═══════════════════════════════════════════════════════════════════════════════
# Provider Features
# ═══════════════════════════════════════════════════════════════════════════════
# OpenAI-compatible providers (OpenAI, OpenRouter, Groq, DeepSeek, Together, etc.)
# Enables ALL OpenAI-compatible providers - select via model config
openai = ["async-openai"]

# Dedicated provider implementations
anthropic = []
ollama = []
gemini = []
azure = []
perplexity = []
xai = ["async-openai"]
huggingface = []
bedrock = []
vertex = ["chrono"]
mlx = []
nvidia = []
flowise = []

[dependencies]
# CLI and UI
clap = { version = "4.5", features = ["derive", "env", "help"] }
clap_complete = "4.5"
clap_complete_fig = "4.5"
colored = "3.0"
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
indicatif = "0.18"
console = "0.16"
atty = "0.2"

# TUI for interactive setup
ratatui = { version = "0.28", optional = true }
crossterm = { version = "0.28", optional = true }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# HTTP and API clients
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "blocking"] }
async-openai = { version = "0.32", optional = true, features = ["chat-completion"] }
backoff = { version = "0.4", features = ["tokio"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# Git operations
git2 = "0.20"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Configuration
config = "0.15"
dirs = "6.0"

# Utilities
regex = "1.10"
once_cell = "1.19"
url = "2.5"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, optional = true }

# Cloud providers
aws-config = { version = "1", default-features = false }
aws-sdk-bedrockruntime = { version = "1", default-features = false }
sha2 = "0.10"
tiktoken-rs = "0.9"
keyring = { version = "3.6", optional = true }
uuid = { version = "1.10", features = ["v4"] }
webbrowser = "1.0"
warp = { version = "0.4", features = ["server"] }
semver = "1.0"
which = "8.0"
tempfile = "3.9"
futures = "0.3"
flate2 = "1.0"
tar = "0.4"
zip = "7.1"
arboard = "3.4"

# MCP (Model Context Protocol) support
rmcp = { version = "0.13.0", features = ["server"] }
serde_urlencoded = "0.7"
rand = "0.9"

# OpenSSL for static musl/Alpine builds
openssl = { version = "0.10", features = ["vendored"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
[dev-dependencies]
mockito = "1.2"
assert_cmd = "2.0"
predicates = "3.0"
proptest = "1.4"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
